added feedURL to /client response
