# rest/router.go
@@ -101,7 +101,7 @@ func (r *Router) SetHandlers() http.Handler {
 		{PathHealthCheckConfig, http.MethodGet, r.healthCheckHandler.HealthCheckConfig},
 		{PathHealthCheckStatus, http.MethodGet, r.healthCheckHandler.HealthCheckStatus},
 		{PathClientFullRegister, http.MethodPost, r.signingAgentHandler.RegisterAgent},
-		{PathClient, http.MethodGet, r.signingAgentHandler.GetAgentID},
+		{PathClient, http.MethodGet, r.signingAgentHandler.GetClient},
 		{PathAction, http.MethodPut, r.actionHandler.ActionApprove},
 		{PathAction, http.MethodDelete, r.actionHandler.ActionReject},
 		{PathClientFeed, defs.MethodWebsocket, r.signingAgentHandler.ClientFeed},
